...

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_destination"
            android:drawablePadding="10dp"
            android:text="Espresso Hangout Room"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="19sp"
            android:layout_margin="16dp"
            />

...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transactionSummary"
            app:queryBackground="@null"
            app:queryHint="Search by name or age" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/student_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/student_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="4"/>

...
